[project]
name = "prp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
